アカウント

--- a/appproject/accounts/templates/group/create_group.html
+++ b/appproject/accounts/templates/group/create_group.html
@@ -4,7 +4,7 @@
 {% block title %}グループ作成 - Codemon{% endblock %}
 
 {% block background_frame %}
-<img src="{% static 'codemon/images/frames/教員用アカウント画面 (2).png' %}" 
+<img src="{% static 'codemon/images/frames/frame_brack.png' %}" 
      alt="" 
      class="bg-frame"
      onerror="this.style.display='none';">
